[package]
name = "fake-root-keys"
version = "0.1.0"
authors = ["xobs <sean@xobs.io>", "bunnie <bunnie@kosagi.com>"]
edition = "2018"
description = "Xous root keys server"

# Dependency versions enforced by Cargo.lock.
[dependencies]
xous = "*"
xous-names = "*"
log = "0.4.14"

xous-ipc = { path = "../Core/xous-ipc"}

num-derive = {version = "0.3.3", default-features = false}
num-traits = {version = "0.2.14", default-features = false}
rkyv = {version = "0.4.3", default-features = false, features = ["const_generics"]}
zeroize = "1.3.0"

# bcrypt
cipher = "0.4.3"
blowfish = { version = "0.8.0", features = ["bcrypt"] }

sha2 = "0.10"

# private keys
aes = {path="../Core/services/aes"}
byteorder = "1.4.3" # used by keywrap
# hardware acceleration adaptations are inserted into a fork of the main branch.
hex = {version = "0.4.3", default-features = false, features = []}

[dependencies.ed25519-dalek]
version = "1.0.1"
default-features = false
features = ["u32_backend", "rand"]

[target.'cfg(not(any(windows,unix)))'.dependencies]
utralib = { path = "../Core/utralib"}

[features]
hazardous-debug = []  # this feature enables the printing of secret materials for debug purposes
default = ["hazardous-debug"]
