[package]
name = "fake-root-keys"
version = "0.1.0"
authors = ["xobs <sean@xobs.io>", "bunnie <bunnie@kosagi.com>"]
edition = "2018"
description = "Xous root keys server"

# Dependency versions enforced by Cargo.lock.
[dependencies]
xous = "0.9.23"
xous-names = { package = "xous-api-names", version = "0.9.18" }
log = "0.4.14"

xous-ipc = "0.9.23"
aes-kw = {version = "0.2.1", features = ["alloc"]}

num-derive = {version = "0.3.3", default-features = false}
num-traits = {version = "0.2.14", default-features = false}
rkyv = {version = "0.4.3", default-features = false, features = ["const_generics"]}
zeroize = { version = "1.5.5", features = [ "derive" ] }

# bcrypt
cipher = "0.4.3"
blowfish = { version = "0.8.0", features = ["bcrypt"] }
byteorder = "1.4.3" # used by keywrap
sha2 = "0.10"

# private keys
aes = {path="../Core/services/aes"}

utralib = { version = "0.1.9", optional = true, default-features = false }

[features]
renode = ["utralib/renode"]
hazardous-debug = []  # this feature enables the printing of secret materials for debug purposes
default = ["renode"]
